
_____________________________________________________________________________________________________


                                       CFDWARP CHANGELOG

_____________________________________________________________________________________________________


2023 JUN 15b
  * in model/emfield/_Epotential*/emfield.c
    - in find_linearization_coefficients_inner_node_emfield(), made coeffgl->ke and coeffgl->ks
      equal to 0 when in 2D
  * in src/common.h
    - in gl_t, added EXM_gl3D_t tsemfcoeffzone
    - in np_t, added tsemfcoeff[27]
  * in cycle/share/cycle_share.c
    - in update_prim_emfield_mem_in_zone_4(), added a call to 
      find_linearization_coefficients_inner_node_emfield() and store them in tsemfcoeff 
      and tsemfcoeffzone
  * in cycle/share/tsemf_share.c
    - in update_dUstar_emfield_SOR_node(), now uses tsemfcoeff instead of coeffp1 and coeffm1
    - in update_dUstar_emfield_SOR_istation(), now uses tsemfcoeff instead of coeffp1 and coeffm1
    

2023 JUN 15a
  * renamed find_linearization_coefficients_inner_node_emfield() 
    to find_linearization_coefficients_inner_node_emfield_interface()
  * in cycle/share/tsemf_share.c
    - added  update_dUstar_emfield_Newton_ij_3() which calls the new function
      find_linearization_coefficients_inner_node_emfield()
    - in update_dUstar_emfield_Newton_ij(), now calls update_dUstar_emfield_Newton_ij_3()
  * in lib/exm/exm.c
    - added EXM_al3() and EXM_all3()
    - rewrote EXM_ai3()
  * in model/emfield
    - copied _Epotential-Bfixed to _Epotential-Bfixed_old
  * in model/emfield/_Epotential/emfield.c
    - in find_linearization_coefficients_bdry_node_emfield(), got rid of the DIREC_FOUND condition
      when finding the linearization coefficients for BDRYEMF_EXTRAPOLATED1 and BDRYEMF_DIELECTRIC
    - added find_linearization_coefficients_inner_node_emfield()
    - in update_bdry_emfield(), changed the BC from ACCURACY_SECONDORDER to ACCURACY_FIRSTORDER