@@ -422,9 +422,9 @@ Cycle(
     relaxEMF=0.8;  {relaxation factor forced on the update of the emfield variables}
     subiter_tsemf=4;
     for (cnt,0,0,
-      UpdateEMField(Lc,relaxEMF,TSEMF_IMAF,subiter_tsemf);
+      {UpdateEMField(Lc,relaxEMF,TSEMF_IMAF,subiter_tsemf);}
       {UpdateEMField(Lc,relaxEMF,TSEMF_DDADI);}
-      UpdateEMField(Lc,relaxEMF,TSEMF_ADI);
+      UpdateEMField(Lc,relaxEMF,TSEMF_SOR,100);
     );
 
 {    UpdateEMField(Lc*100,relaxEMF,TSEMF_NEWTON);}
