@@ -7,6 +7,15 @@ ________________________________________________________________________________
 _____________________________________________________________________________________________________
 
 
+2023 JUN 17a
+  * in cycle/share/tsemf_share.c
+    - in update_dUstar_emfield_SOR_node(), fixed a bug related to koffset 
+    - in  update_dUstar_emfield_SOR_istation(), fixed a bug related to koffset
+  * in src/common.c
+    - in _al(), changed assert(theta<nd) to a more appropriate if (theta>=nd && offset!=0) fatal_error()
+    - in _node_rank(), added assert(is_node_in_zone(i,j,k,domainlim));
+    
+
 2023 JUN 15b
   * in model/emfield/_Epotential*/emfield.c
     - in find_linearization_coefficients_inner_node_emfield(), made coeffgl->ke and coeffgl->ks
